human-intervention-logs/io.grpc:grpc-alts:1.68.0/gradle-test/gradle-test-2026-05-04T08-05-07-230608Z.log
Starting a Gradle Daemon, 7 busy and 4 incompatible and 147 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.grpc:grpc-alts:1.68.0
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4732-43d16533/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 7 busy and 6 incompatible and 146 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4732-43d16533/tests/src/io.grpc/grpc-alts/1.68.0/src/test/java/io_grpc/grpc_alts/Grpc_altsTest.java:143: error: incompatible types: invalid functional descriptor for lambda expression
> Task :compileTestJava FAILED
                .intercept((call, headers, next) -> next.startCall(call, headers));

                           ^
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4732-43d16533/tests/src/io.grpc/grpc-alts/1.68.0/build/reports/problems/problems-report.html
    method (ServerCall<ReqT,RespT>,Metadata,ServerCallHandler<ReqT,RespT>)Listener<ReqT> in interface ServerInterceptor is generic
  where ReqT,RespT are type-variables:
    ReqT extends Object declared in method <ReqT,RespT>interceptCall(ServerCall<ReqT,RespT>,Metadata,ServerCallHandler<ReqT,RespT>)
    RespT extends Object declared in method <ReqT,RespT>interceptCall(ServerCall<ReqT,RespT>,Metadata,ServerCallHandler<ReqT,RespT>)
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4732-43d16533/tests/src/io.grpc/grpc-alts/1.68.0/src/test/java/io_grpc/grpc_alts/Grpc_altsTest.java:143: error: incompatible types: invalid functional descriptor for lambda expression

                  .intercept((call, headers, next) -> next.startCall(call, headers));
Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.
                             ^

      method (ServerCall<ReqT,RespT>,Metadata,ServerCallHandler<ReqT,RespT>)Listener<ReqT> in interface ServerInterceptor is generic
You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.
    where ReqT,RespT are type-variables:

      ReqT extends Object declared in method <ReqT,RespT>interceptCall(ServerCall<ReqT,RespT>,Metadata,ServerCallHandler<ReqT,RespT>)
For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
      RespT extends Object declared in method <ReqT,RespT>interceptCall(ServerCall<ReqT,RespT>,Metadata,ServerCallHandler<ReqT,RespT>)
12 actionable tasks: 1 executed, 11 up-to-date
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 7s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4732-43d16533/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.grpc:grpc-alts:1.68.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 19s
9 actionable tasks: 1 executed, 8 up-to-date
